# AMD-DeveloperHack

./: .gitignore  Dockerfile  LICENSE  README.md  SUBMISSION.md  hackathon-strategy-knowledge.md  info.md  pyproject.toml  replaylab-agent-architecture.md  replaylab-first-task-prompt.md  replaylab-mvp-architecture.md  requirements.txt  run_gpu_experiments.sh
.github/workflows/: test.yml
docs/: README.md  project-cost-risk.md  replaylab-mvp-task-plan.md
replaylab/: README.md  __init__.py
replaylab/backend/: __init__.py  agent.py  app.py  diagnose_cli.py  diagnoser.py  full_demo.py  gpu_telemetry.py  llm_diagnoser.py  planner.py  report.py  run_cli.py  runner.py  verifier.py  vllm_taxonomy.py
replaylab/demo/: __init__.py  config_bad.json  config_bad_model_path.json  config_bad_timeout.json  config_good.json  config_good_model_path.json  config_good_timeout.json  demo_experiment.py  gpu_experiment.py
replaylab/frontend/: .gitkeep  README.md  gradio_app.py  index.html
replaylab/runs/: .gitkeep  report.html
replaylab/runs/bad_run/: metrics.json  run.json  stdout.txt
replaylab/runs/diag_bad_model/: artifact.json  run.json  stdout.txt
replaylab/runs/diag_good_model/: metrics.json  run.json  stdout.txt
replaylab/runs/diag_tmp_bad_model/: metrics.json
replaylab/runs/diag_tmp_good_model/: artifact.json
replaylab/runs/full_bad_run/: artifact.json  metrics.json  run.json  (+1 more)
tests/: test_agent_loop.py  test_diagnoser.py  test_gpu_telemetry.py  test_llm_diagnoser.py  test_planner.py  test_report.py  test_runner.py  test_verifier.py  test_vllm_taxonomy.py
(+44 files in other folders)
